[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/EquipItemVarUI.gd" type="Script" id=1]
[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/AutoSelectorVarUI.tscn" type="PackedScene" id=2]

[node name="EquipItemVarUI" type="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 33.0
margin_bottom = 19.0
text = "Head"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
visible = false
margin_left = 37.0
margin_right = 1160.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="AutoSelectorVarUI" parent="HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 37.0
margin_right = 1160.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="AutoCheckBox" type="CheckBox" parent="HBoxContainer"]
margin_left = 1164.0
margin_right = 1280.0
margin_bottom = 24.0
text = "Auto re-equip"

[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="onValueChange" from="HBoxContainer/AutoSelectorVarUI" to="." method="_on_AutoSelectorVarUI_onValueChange"]
[connection signal="toggled" from="HBoxContainer/AutoCheckBox" to="." method="_on_AutoCheckBox_toggled"]
